--- a/index.html
+++ b/index.html
@@ -305,19 +305,19 @@
     <h1>Recent Trips</h1>
     <div class="recent">
     <div class="rec1">
-        <img src="https://preview.colorlib.com/theme/travelo/img/trip/x1.png.pagespeed.ic.TCe9EhKBE3.webp" alt="">
+        <img src="https://images.pexels.com/photos/2801312/pexels-photo-2801312.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
         <p>Oct 12, 2019</p>
         <h1><a href="#">Journeys Are Best Measured In New Friends</a> </h1>
     </div>
 
     <div class="rec2">
-        <img src="https://preview.colorlib.com/theme/travelo/img/trip/x2.png.pagespeed.ic.wrqsn2d2l2.webp" alt="">
+        <img src="https://images.pexels.com/photos/2801312/pexels-photo-2801312.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
         <p>Oct 12, 2019</p>
         <h1><a href="#">Journeys Are Best Measured In New Friends</a> </h1>
     </div>
 
     <div class="rec3">
-        <img src="https://preview.colorlib.com/theme/travelo/img/trip/x3.png.pagespeed.ic.jiKGCsekSW.webp" alt="">
+        <img src="https://images.pexels.com/photos/2801312/pexels-photo-2801312.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
         <p>Oct 12, 2019</p>
         <h1><a href="#">Journeys Are Best Measured In New Friends</a></h1>
     </div>
